langs = [
    'ar',
    'ca',
    'cs',
    'de',
    'el',
    'es',
    'eu',
    'fr',
    'gl',
    'hu',
    'he',
    'it',
    'ja',
    'nl',
    'pl',
    'pt_BR',
    'pt',
    'ru',
    'sv',
    'vi',
    'zh_CN',
    'zh_TW',
]

i18n = import('i18n')
i18n.gettext(meson.project_name(), languages : langs)
